gts-macros/tests/compile_fail/non_gts_generic.stderr
error: struct_to_gts_schema: Base structs must have either an ID field (one of: $id, id, gts_id, or gtsId) of type GtsInstanceId OR a GTS Type field (one of: type, gts_type, gtsType, or schema) of type GtsSchemaId
  --> tests/compile_fail/non_gts_generic.rs:19:12
   |
19 | pub struct BaseEventV1<P> {
   |            ^^^^^^^^^^^

error[E0412]: cannot find type `BaseEventV1` in this scope
  --> tests/compile_fail/non_gts_generic.rs:33:17
   |
33 |     let _event: BaseEventV1<MyStruct> = BaseEventV1 {
   |                 ^^^^^^^^^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `BaseEventV1` in this scope
  --> tests/compile_fail/non_gts_generic.rs:33:41
   |
33 |     let _event: BaseEventV1<MyStruct> = BaseEventV1 {
   |                                         ^^^^^^^^^^^ not found in this scope
